# MyClaw.lippytm.AI-

./: .gitignore  PROJECT_ROLE.md  README.md  REPO_AWARENESS.md  REPO_LINKS.md  SECURE_AGENT_WORKFLOWS.md  SYSTEM_ARCHITECTURE.md  pyproject.toml
.github/workflows/: docs-check.yml
docs/swarm/: multi-agent-protocol.md  routing-and-escalation.md  super-synthetic-intelligence.md
myclaw_swarm.egg-info/: PKG-INFO  SOURCES.txt
swarm/: __init__.py  agent.py  awareness_sync.py  cluster_router.py  confidence_loop.py  coordinator.py  dead_letter_queue.py  event_bridge.py  improvement_loop.py  messaging.py  mission_supervisor.py  network.py  replay_loop.py  routing.py  state_tracker.py  sync.py  telemetry_loop.py
tests/: __init__.py  test_agent.py  test_awareness_sync.py  test_cluster_router.py  test_confidence_loop.py  test_coordinator.py  test_event_bridge.py  test_improvement_loop.py  test_messaging.py  test_mission_supervisor.py  test_network.py  test_replay_loop.py  test_state_tracker.py  test_sync.py  test_telemetry_loop.py
